feat: Implement Streamlit MVP (Phase 2) and refactor backend services

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-google-generativeai
+google-genai
 sounddevice
 soundfile
-pydub
 python-dotenv
 numpy
-google-genai
+sqlalchemy
+bcrypt
+streamlit
+streamlit_audiorecorder
