--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "bcrypt>=5.0.0",
     "google-genai>=1.52.0",
     "numpy>=2.3.5",
+    "psycopg2>=2.9.11",
     "python-dotenv>=1.2.1",
     "sounddevice>=0.5.3",
     "soundfile>=0.13.1",
